[gd_scene load_steps=10 format=3 uid="uid://p615165ww115"]

[ext_resource type="Script" uid="uid://d3mkcw64h0vty" path="res://src/characters/player/player.gd" id="1_mtcsl"]
[ext_resource type="Texture2D" uid="uid://bqhpul6ywbnp0" path="res://assets/pixel-hoops/Character.png" id="2_8vxif"]
[ext_resource type="Script" uid="uid://lv1qjgjxbmnm" path="res://src/characters/player/stamina_bar.gd" id="3_5c1al"]

[sub_resource type="Animation" id="Animation_4vqyd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_uy8rl"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_5q1oe"]
resource_name = "idle_dribble"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5yv1r"]
_data = {
&"RESET": SubResource("Animation_4vqyd"),
&"idle": SubResource("Animation_uy8rl"),
&"idle_dribble": SubResource("Animation_5q1oe")
}

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_o546c"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mtcsl"]
height = 46.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_mtcsl")

[node name="Body" type="Sprite2D" parent="."]
position = Vector2(0, -24)
texture = ExtResource("2_8vxif")
hframes = 29
vframes = 21

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_5yv1r")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_o546c")
anim_player = NodePath("../AnimationPlayer")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -24)
shape = SubResource("CapsuleShape2D_mtcsl")

[node name="StaminaTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="StaminaBar" type="HBoxContainer" parent="." node_paths=PackedStringArray("progress_timer")]
offset_left = -20.0
offset_top = -67.0
offset_right = 20.0
offset_bottom = -52.0
script = ExtResource("3_5c1al")
progress_timer = NodePath("../StaminaTimer")
metadata/_custom_type_script = "uid://lv1qjgjxbmnm"

[connection signal="timeout" from="StaminaTimer" to="." method="_on_stamina_timer_timeout"]
